
find_package(Threads REQUIRED)
find_package(cmocka REQUIRED)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(TASK_TEST task_test)
add_executable(${TASK_TEST} osal/task_test.c)
target_link_libraries(${TASK_TEST} dmosal ${CMOCKA_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(check ${TASK_TEST})
add_test(${TASK_TEST} ${TASK_TEST})

set(RM_TEST rm_test)
add_executable(${RM_TEST} osal/rm_test.c)
target_link_libraries(${RM_TEST} dmosal ${CMOCKA_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(check ${RM_TEST})
add_test(${RM_TEST} ${RM_TEST})

set(MUTEX_TEST mutex_test)
add_executable(${MUTEX_TEST} osal/mutex_test.c)
target_link_libraries(${MUTEX_TEST} dmosal ${CMOCKA_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(check ${MUTEX_TEST})
add_test(${MUTEX_TEST} ${MUTEX_TEST})

set(LIFO_TEST lifo_test)
add_executable(${LIFO_TEST} osal/lifo_test.c)
target_link_libraries(${LIFO_TEST} dmosal ${CMOCKA_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(check ${LIFO_TEST})
add_test(${LIFO_TEST} ${LIFO_TEST})

set(ERROR_TEST error_test)
add_executable(${ERROR_TEST} osal/error_test.c)
target_link_libraries(${ERROR_TEST} dmosal ${CMOCKA_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(check ${ERROR_TEST})
add_test(${ERROR_TEST} ${ERROR_TEST})

set(SEM_TEST sem_test)
add_executable(${SEM_TEST} osal/sem_test.c)
target_link_libraries(${SEM_TEST} dmosal ${CMOCKA_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(check ${SEM_TEST})
add_test(${SEM_TEST} ${SEM_TEST})
